[gd_scene load_steps=4 format=3 uid="uid://d0ci6206qv8nl"]

[ext_resource type="Script" path="res://cenas/meteoro.gd" id="1_3u761"]
[ext_resource type="AudioStream" uid="uid://dweelgp2ne8ao" path="res://Graphics/Bonus/16-bit-explosion_120bpm_C_major.wav" id="2_1sjcb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b8lir"]
radius = 50.1597

[node name="meteoro" type="Area2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_3u761")

[node name="meteoro_spr" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_b8lir")

[node name="explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_1sjcb")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
